@@ -1,12 +1,7 @@
 {
-  "count": 21,
-  "uniques": 11,
+  "count": 19,
+  "uniques": 10,
   "views": [
-    {
-      "timestamp": "2024-01-22T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-23T00:00:00Z",
       "count": 2,
